<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_app_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        >

        <com.fei.demo.views.MoreInfoItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:picture="@drawable/more_clear_cache"
            app:text="@string/str_more_clear_cache">
        </com.fei.demo.views.MoreInfoItemView>

        <com.fei.demo.views.MoreInfoItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:picture="@drawable/more_online_shop"
            app:text="@string/str_more_online_shop">
        </com.fei.demo.views.MoreInfoItemView>

        <com.fei.demo.views.MoreInfoItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:picture="@drawable/more_customer_service"
            app:text="@string/str_more_customer_service">
        </com.fei.demo.views.MoreInfoItemView>

        <com.fei.demo.views.MoreInfoItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:picture="@drawable/more_feedback"
            app:text="@string/str_more_feedback">
        </com.fei.demo.views.MoreInfoItemView>

        <com.fei.demo.views.MoreInfoItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:picture="@drawable/more_ratings"
            app:text="@string/str_more_ratings">
        </com.fei.demo.views.MoreInfoItemView>

        <com.fei.demo.views.MoreInfoItemView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:picture="@drawable/more_about_app"
            app:text="@string/str_more_about_app">
        </com.fei.demo.views.MoreInfoItemView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:text="@string/str_more_about_agreement"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="12dp"
            android:text="@string/str_more_about_copyright"
            android:textColor="@color/welcome_text" />
    </LinearLayout>

</RelativeLayout>
