<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/str_lang"
        />

    <RadioGroup
        android:id="@+id/lang_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <RadioButton
            android:id="@+id/lang_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lang_chinese"/>

        <RadioButton
            android:id="@+id/lang_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_lang_english"/>
    </RadioGroup>

</RelativeLayout>
